sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: type int
{var i : int =0;
         ^AlgInsertionSort:7: error: not found: type i
setValeur(getValeur[i], i);
                    ^